--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-index
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+欢迎来到我的主页
+</body>
+</html>
