--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dva Demo</title>
-  <link rel="stylesheet" href="index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dva Demo</title>
+    <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
 
-  <div id="root"></div>
-  <script src="index.js"></script>
+<div id="root"></div>
+<div>
+    <a href="https://www.baidu.com">这里是百度标签</a>
+</div>
+<script src="index.js"></script>
 
 </body>
 </html>
