--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head>d
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <title>风</title>
@@ -11,7 +11,6 @@
 <body id="bgc">
 <div class="mb-box">
     <div class="bb">
-
         <h2>❤️</h2>
         <div class="bb_text">
             <div id="code">
@@ -22,7 +21,6 @@
             风
             <br>
         </p>
-
     </div>
 </div>
 <script>
