--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <html>
-<head>d
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <title>风</title>
